# ludwig

./: .gitignore  README.md  pyproject.toml
config/: urls.py  views.py  wsgi.py
config/settings/: base.py  local.py  production.py
docker/development/: Dockerfile  compose.yml
docker/production/: Dockerfile  compose.yml
docs/: design.md
ludwig/accounts/: apps.py  constants.py  forms.py  models.py  urls.py  views.py
ludwig/accounts/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py
ludwig/accounts/tests/: test_models.py  test_views.py
ludwig/base/: apps.py  models.py  urls.py  views.py
ludwig/conversations/: apps.py  models.py
ludwig/conversations/migrations/: 0001_initial.py
ludwig/dashboard/: apps.py  constants.py  tests.py  urls.py  views.py
ludwig/dashboard/tests/: test_constants.py  test_views.py
ludwig/dialogues/: admin.py  apps.py  constants.py  forms.py  models.py  tests.py  urls.py  views.py
ludwig/dialogues/migrations/: 0001_initial.py  0002_alter_dialogue_id.py  0003_alter_dialogue_id.py  0004_alter_dialogue_id_alter_dialogue_is_open_and_more.py  0005_alter_dialogue_options_alter_dialogue_id.py  0006_alter_dialogue_is_visible.py  0007_dialogue_created_by.py  0008_remove_dialogue_created_by_dialogue_author.py
ludwig/dialogues/templatetags/: dialogue_filters.py
static/css/: base.css  fonts.css  home.css
templates/: 400.html  403.html  404.html  500.html  base.html  home.html
templates/accounts/: dashboard.html  login.html  register.html
templates/dashboard/: dashboard.html
(+37 files in other folders)
